Commenting out footer css to try and find what is stopping the bullet points from aligning with the text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,11 +57,10 @@
 
 /*Footer styles*/
 
-.rules {
-  text-align:center;
-  width: fit-content;     
+
+/* .list { 
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
-  list-style:none;
-
-}
+  list-style-position: inside;
+}*/
